--- a/public/styles.css
+++ b/public/styles.css
@@ -1,32 +1,99 @@
-.main {
-    padding: 20px;
-    font-family: 'Helvetica', serif;
-    box-shadow: 5px 5px 7px 5px #888888;
+*{
+    justify-content: center;
+    font-family: "Poppins";
+    align-items: center;
 }
 
-.main h1 {
-    font-size: 40px;
+html {
+    display: table;
+    margin: auto;
+}
+
+body {
+    display: table-cell;
+    vertical-align: middle;
+    background-image: url('./bg.jpeg');
+    background-position: 50vh;
+}
+
+.card{
+    width: 500px;
+    margin: 0 auto;
+}
+
+/* Left-Card styles*/
+
+#left{
+    padding: 40px;
+    margin-bottom: 70px;
+    width: 28rem;
+    height:32rem;
+    margin-top:100px; 
+    float:left;
+}
+
+img{
+    padding-left: 50px;
+    padding-right: 50px;
+}
+
+.ltext{
     text-align: center;
-    font-family: 'Helvetica', serif;
+    font-size: 30px;
+    margin-top: 180px;
 }
 
-input {
-    font-family: 'Helvetica', serif;
-    width: 100%;
-    font-size: 20px;
-    padding: 12px 20px;
-    margin: 8px 0;
-    border: none;
-    border-bottom: 2px solid #767474;
+.ltext2{
+    font-size: 17px;
+    text-align: center;
+    color: darkgrey;
+    margin-bottom: 180px;    
 }
 
-input[type=submit] {
-    font-family: 'Helvetica', serif;
-    width: 100%;
-    background-color: #767474;
-    border: none;
+/* Right-Card styles*/
+
+#right{
+    background: rgb(43, 43, 60);
+    padding: 25px;
+    padding-right: 35px;
+    padding-left: 35px;
+    width:23rem; 
+    height: 32rem; 
+    padding-top: 80px; 
+    margin-top:100px;
+}
+
+.rtext{
+    color: aquamarine;
+    font-size: 24px;
+    font-weight: 500;
+}
+
+#rtext2{
+    color: darkgrey;
+    margin-left: 15px;
+}
+
+#btn{
+    background-color: rgb(84, 235, 184);
     color: white;
-    padding: 16px 32px;
-    margin: 4px 2px;
-    border-radius: 10px;
+    font-size: 20px;
+    font-weight: 200;
+}
+
+input.form-control, textarea {
+    height: 45px;
+    background-color:rgb(63, 63, 80); 
+    border: none;
+    margin-bottom: 10px;
+}
+
+input.form-control, value{
+    color:rgb(180, 174, 174);
+    font-size: 15px;
+    font-weight: 500;
+}
+
+#lock{
+    background-color: darkgrey;
 }
